<resources>
    <string name="app_name">Navpe</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="filter">filter</string>
    <string name="email">Email</string>
    <string name="reset">Reset</string>
    <string name="safety_net_api_key">AIzaSyAu526UKMbe2bkV5rlj0TaA89JImXYExdc</string>
    <string name="messageKey">"key=AAAAWD1O2P0:APA91bH80zgY3eKZ1o0kDpduLVIfdL3n4WGP7NJb8I9ZkaK-hp4IRedjJ90ntOE5Jy2V3NfMAfJ8ciR0NP2eQshDil1erAUlZZGjqKC_kk_lAWHu0afVWZlzDB9X3TH1aB7Jkxmiujpt"</string>
    <string name="default_notification_channel_id">Channel01</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home Page</string>
    <string name="second_fragment_label">Profile Page</string>
    <string name="fourth_fragment_label">History</string>

    <string name="profile">Profile</string>
    <string name="profileImage">profileImage</string>
    <string name="change_password">Change Password</string>
    <string name="india">India</string>
    <string name="search_map">Search</string>
    <string name="address">Address</string>
    <string name="slider_image">Slider Image</string>
    <string name="back">Back</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="reset_password">Reset Password</string>
    <string name="faq">Frequently Asked Questions:</string>
    <string name="query">Query</string>
    <string name="content">Content</string>
    <string name="navpe_gmail_com">NAVPE@gmail.com</string>
    <string name="ask_more_detail_at">Ask More Detail at</string>
    <string name="no_result_found">No result Found</string>
    <string name="logo_image">Logo Image</string>
    <string name="history">History</string>
    <string name="user_name">User name</string>
    <string name="scan_qr">Scan QR</string>
    <string name="transfer_money">TRANSFER MONEY</string>
    <string name="to_mobile_number">To mobile number</string>
    <string name="to_navpe_id">To Navpe ID</string>
    <string name="to_self_account">To Self Account</string>
    <string name="check_balance">Check Balance</string>
    <string name="navpay_id">My NAVPE Id: 7388873380@navpe</string>
    <string name="scan_and_pay">Scan and Pay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="suggested">Suggested</string>
    <string name="light">light</string>
    <string name="gallery">Gallery</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="your_account">YOUR ACCOUNT</string>
    <string name="settings">SETTINGS</string>
    <string name="face_payment">Face Payment</string>
    <string name="languages">Languages</string>
    <string name="qr_code">QR code</string>
    <string name="themes_value">Themes</string>
    <string name="confirm">Confirm</string>
    <string name="month">Month</string>
    <string name="amount_to_be_paid">Amount to be paid:</string>
    <string name="_30">₹ 30</string>
    <string name="rec">Varun Wadhwa</string>
    <string name="use_pin_instead">Use Pin Instead</string>
    <string name="time">1 Days Ago</string>
    <string name="paid_to">Paid to</string>
    <string name="debited_from_navpe">Debited from Navpe</string>
    <string name="sbi">State Bank of India</string>
    <string name="ac_no">223-45x-xxx-xxx</string>
    <string name="upi">UPI</string>
    <string name="tfe_od_camera_error">error</string>
    <string name="upi_id">UPI ID</string>
    <string name="you_are_paying">You are paying</string>
    <string name="_0">0</string>
    <string name="add_message">Add Message</string>
    <string name="rs">₹</string>
    <string name="pdctw">Please wait don\'t close this page.....</string>
    <string name="pay_msg">Your payment of $$ to %% was successful at ##</string>
    <string name="show_msg">Your Balance is ₹ 5000</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="log_in">Log In</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="otp">OTP</string>
    <string name="phone">Phone</string>
    <string name="not_available">Not Available</string>
    <string name="scrollview">ScrollView</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Full Name</string>
    <string name="dob">Dob</string>
    <string name="update">Update</string>
    <string name="upi_bank_account">UPI BANK ACCOUNT</string>
    <string name="wallet">WALLET</string>
    <string name="navpe_wallet">NAVPE wallet</string>
    <string name="no_account_added">No Account Added</string>
    <string name="bank_name">Bank Name</string>
    <string name="enter_upi_pin">Enter Pin</string>
    <string name="pin_pass">* * * *</string>
    <string name="disclaimer">Do not disclose your UPI Pin to anyone</string>
    <string name="balance">Balance : </string>
    <string name="Top_up_wallet">Top-up Wallet</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="line">line</string>
    <string name="proceed_to_topup">Proceed to Topup</string>
    <string name="_50000">₹ 50000</string>
    <string name="send_money">SEND MONEY</string>
    <string name="pay">PAY</string>
    <string name="add_account">Add Account</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="account_number">Account Number</string>
    <string name="re_enter_account_number">Re-Enter Account number</string>
    <string name="ifsc_code">IFSC code</string>
    <string name="account_holder_name_optional">Account Holder Name(Optional)</string>
    <string name="balance_fetched_successfully">Balance Fetched Successfully</string>
    <string name="done">Done</string>
    <string name="switch_camera">SwitchCamera</string>
    <string name="add_face">Add Face</string>
    <string name="show_image">Show image</string>
    <string name="show_stored_image">Previous Image</string>
    <string name="update_face">Update Face</string>
    <string name="close_btn">Close_Btn</string>
    <string name="channel_name">channel01</string>
    <string name="channel_description">Notification in APP</string>
    <string name="image_preview">Image Preview</string>
    <string name="click">Click</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="nothing">Nothing</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="sent_message">Sent Message</string>
    <string name="enter_upi">Enter UPI</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="VERSION">V 2.0.1</string>
    <string name="set_pin">Set Pin</string>
    <string name="set_a_4_digit_pin">Set a 4 digit pin</string>
    <string name="lock_icon">Lock Icon</string>
</resources>