<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home">
    <action android:id="@+id/action_global_mainFragment"
        app:destination="@id/home"/>
    <action android:id="@+id/action_global_profileFragment"
        app:destination="@id/account1"/>
    <fragment
        android:id="@+id/account1"
        android:name="com.example.navpe.Fragments.FragmentProfile"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/home"
        android:name="com.example.navpe.Fragments.FragmentHome"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_account1"
            app:destination="@id/account1" />
    </fragment>
    <fragment
        android:id="@+id/history"
        android:name="com.example.navpe.Fragments.FragmentHistory"
        android:label="@string/fourth_fragment_label"
        tools:layout="@layout/fragment_history" />

</navigation>