<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddFaceActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/fragment_camera" />

        <ImageView
            android:id="@+id/faceImage1"
            android:layout_width="65dp"
            android:layout_height="75dp"
            android:contentDescription="@string/add_face" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/faceImage1"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/ropa_sans"
            android:text="@string/update_face"
            android:textColor="#E53935" />

        <LinearLayout
            android:id="@+id/block"
            android:layout_width="300dp"
            android:layout_height="320dp"
            android:layout_centerInParent="true"
            android:background="@drawable/roundedcorners"
            android:orientation="horizontal" />

        <Button
            android:id="@+id/click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#3754BD"
            android:text="@string/click" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/show_image"
            app:srcCompat="@drawable/show_image_updated" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView6"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:text="@string/show_stored_image"
            android:textColor="#1976D2"
            android:textSize="12sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>