<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.UPI_Pin"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/ropa_sans"
            android:gravity="center_vertical"
            android:text="@string/bank_name"
            android:textSize="20sp"
            android:textColor="@color/contrastColor"/>

        <ImageView
            android:layout_width="127dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/logo_image"
            android:src="@drawable/img" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/styleButtonBackground"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:ignore="UseCompoundDrawables">
        <TextView
            android:id="@+id/payer_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/ropa_sans"
            android:gravity="center_vertical"
            android:textColor="@color/background"
            android:textSize="20sp"
            android:text="@string/name" />
        <TextView
            android:id="@+id/amount3"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/_0"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_upi_pin"
        android:textColor="@color/contrastColor"
        android:fontFamily="@font/ropa_sans"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3" />

    <EditText
        android:id="@+id/pinUPI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white"
        android:backgroundTint="@color/diffColor"
        android:backgroundTintMode="add"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/pin_pass"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:textColor="@color/styleFont"
        android:textColorHint="@color/styleFont"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ropa_sans"
        android:text="@string/disclaimer"
        android:textColor="@color/diffCol"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout2" />


</androidx.constraintlayout.widget.ConstraintLayout>