<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PayActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:paddingVertical="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/back"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        android:background="@drawable/trans_rounded"
        android:backgroundTint="@color/white"
        android:backgroundTintMode="add"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="75sp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/view1"
            android:layout_width="113dp"
            android:layout_height="108dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:elevation="12dp"
            app:cardCornerRadius="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/userImage2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:contentDescription="@string/profileImage"
                android:scaleType="fitCenter"
                android:src="@drawable/img"
                tools:ignore="ImageContrastCheck" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50sp"
            android:text="@string/you_are_paying"
            android:textColor="@color/contrastColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/user_name"
            android:textColor="@color/contrastColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/upi0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/upi_id"
            android:textColor="@color/contrastColor"
            android:textSize="20sp"
            android:textStyle="normal" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:background="@drawable/trans_rounded"
            android:backgroundTint="@color/styleButtonBackground"
            android:backgroundTintMode="add"
            android:orientation="horizontal"
            android:paddingHorizontal="20sp"
            android:paddingVertical="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rs"
                android:textColor="@color/background"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/amount2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="1"
                android:background="@drawable/trans_rounded"
                android:hint="@string/_0"
                android:inputType="number"
                android:minWidth="60sp"
                android:minHeight="48dp"
                android:textColorHint="@color/background"
                android:textColor="@color/background"
                android:textSize="30sp"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="50sp"
            android:paddingHorizontal="40sp"
            app:boxBackgroundMode="filled">

            <com.google.android.material.textfield.TextInputEditText
                android:background="@drawable/trans_rounded"
                android:id="@+id/message1"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:hint="@string/add_message"
                android:textColor="@color/contrastColor"
                android:textColorHint="@color/contrastColor"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/confirm1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/styleButtonBackground"
        android:text="@string/confirm"
        android:textColor="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>