<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTintMode="add"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:baselineAligned="false"
        style="@style/CARD_STYLE">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:elevation="12dp"
                app:cardCornerRadius="120dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/userImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/profileImage"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img"
                    android:background="@color/diffColor"
                    tools:ignore="ImageContrastCheck" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:layout_marginBottom="5dp"
                android:text="@string/time"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paid_to"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/usr_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop= "15dp"
                android:text="@string/name"
                android:fontFamily="@font/roboto"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/amountHist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_30"
                android:layout_margin="15dp"
                android:gravity="end"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/type_txn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debited_from_navpe"
                android:gravity="end"
                android:layout_margin="15dp"
                android:fontFamily="@font/roboto"
                android:textSize="11sp"/>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>